# mcp-development

./: .zshrc  README.md
docs/: architecture-slider.html
drugbot-ui/: GEMINI.md  claude.md  package-lock.json  package.json
drugbot-ui/src/app/: globals.css  layout.tsx
drugbot-ui/src/app/about/: page.tsx
drugbot-ui/src/components/: animated-layout.tsx  client-layout.tsx  header.tsx  mobile-footer-nav.tsx  mode-toggle.tsx
drugbot-ui/src/components/chat/: chat-container.tsx  chat-input.tsx  message-bubble.tsx  message-list.tsx
drugbot-ui/src/hooks/: use-chat.ts
drugbot-ui/src/lib/: types.ts
mcp-openfda-client/: .dockerignore  .env  .gitignore  Dockerfile  GEMINI.md  README.md  api.py  client.py  main.py  pyproject.toml  start.sh
mcp-openfda-server/: .dockerignore  .env  .gitignore  Dockerfile  GEMINI.md  README.md  main.py  openfda-recall-api-sample-response.md  openfda_api.py  pyproject.toml  server.py
